[gd_scene load_steps=7 format=3 uid="uid://cn7kia260vgxb"]

[ext_resource type="Texture2D" uid="uid://bg27k5sblx533" path="res://art/objects/Door_01.png" id="1_8xe4t"]
[ext_resource type="Script" path="res://Scripts/KeyDoor.gd" id="1_atqpq"]

[sub_resource type="Gradient" id="Gradient_06ant"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_08510"]
gradient = SubResource("Gradient_06ant")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koapf"]
size = Vector2(91, 141)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2athd"]
properties/0/path = NodePath(".:isOpen")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="KeyDoor" type="Node2D" node_paths=PackedStringArray("doorOpen", "doorClosed", "exitArea")]
script = ExtResource("1_atqpq")
doorOpen = NodePath("DoorOpen")
doorClosed = NodePath("DoorClosed")
exitArea = NodePath("ExitArea")

[node name="DoorClosed" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(0, -70)
scale = Vector2(0.55, 0.55)
texture = ExtResource("1_8xe4t")

[node name="DoorOpen" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(0, -65)
scale = Vector2(0.275, 130.952)
texture = SubResource("GradientTexture1D_08510")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -69)
shape = SubResource("RectangleShape2D_koapf")

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(0, -69)
shape = SubResource("RectangleShape2D_koapf")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2athd")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
